try to fix scrollbar differences
+ add hover states to albumcard and artist card

--- a/src/assets/scss/Global/scrollbars.scss
+++ b/src/assets/scss/Global/scrollbars.scss
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar {
-  width: $smaller;
+  width: 3px;
 }
 
 /* Track */
